hphp/hack/test/typecheck/coeffects/invalid_wildcards.php
<?hh

function f()[_]: void {}

function hof((function ()[_]: void) $f): void {}
